plugins {
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {
    implementation rootProject
    implementation 'net.yura:lobby-server:1.0.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.mockito:mockito-core:5.20.0'
}

// To run the test server, execute the following command in the root project directory:
// ./gradlew :server:runTestServer
task runTestServer(type: JavaExec) {
    group = "Verification"
    description = "Runs the TestServer"
    mainClass = 'net.yura.shithead.server.TestServer'
    classpath = sourceSets.test.runtimeClasspath
}
